[package]
name = "inkwell_llvm12"
version = "0.1.0"
authors = ["Daniel Kolsoi <thadan64@gmail.com>"]
description = "Inkwell aims to help you pen your own programming languages by safely wrapping llvm-sys."
documentation = "https://thedan64.github.io/inkwell/"
repository = "https://github.com/Pavlos-Efstathiou/inkwell"
readme = "README.md"
keywords = ["llvm", "safe", "wrapper"]
license = "Apache-2.0"
categories = ["development-tools::ffi"]
edition = "2018"

[features]
default = ["target-all", "llvm12-0"]
# Please update internal_macros::FEATURE_VERSIONS when adding a new LLVM version
llvm12-0 = ["llvm-sys-120"]
# Don't link aganist LLVM libraries. This is useful if another dependency is
# installing LLVM. See llvm-sys for more details. We can't enable a single
# `no-llvm-linking` feature across the board of llvm versions, as it'll cause
# cargo to try and download and compile them all. See
# https://github.com/rust-lang/cargo/issues/3494
llvm12-0-no-llvm-linking = ["llvm12-0", "llvm-sys-120/no-llvm-linking"]
# Don't force linking to libffi on non-windows platforms. Without this feature
# inkwell always links to libffi on non-windows platforms.
no-libffi-linking = []
target-x86 = []
target-arm = []
target-mips = []
target-aarch64 = []
target-amdgpu = []
target-systemz = []
target-hexagon = []
target-nvptx = []
target-msp430 = []
target-xcore = []
target-powerpc = []
target-sparc = []
target-bpf = []
target-lanai = []
target-webassembly = []
target-riscv = []
target-all = [
    "target-x86",
    "target-arm",
    "target-mips",
    "target-aarch64",
    "target-amdgpu",
    "target-systemz",
    "target-hexagon",
    "target-nvptx",
    "target-msp430",
    "target-xcore",
    "target-powerpc",
    "target-sparc",
    "target-bpf",
    "target-lanai",
    "target-webassembly",
    "target-riscv"
]
experimental = ["static-alloc"]
nightly = ["inkwell_internals/nightly"]

[dependencies]
either = "1.5"
inkwell_internals = "0.5.0"
libc = "0.2"
llvm-sys-120 = { package = "llvm-sys", version = "120.2", optional = true }
once_cell = "1.4.1"
parking_lot = "0.11"
static-alloc = { version = "0.2", optional = true }

[dev-dependencies]
regex = "1"